--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@aws-sdk/client-dynamodb": "^3.609.0",
     "@nextui-org/react": "^2.4.6",
     "framer-motion": "^11.3.8",
-    "next": "14.2.4",
+    "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18"
   },
